[package]
authors = ["Gabriel Musat Mestre"]
categories = ["databases", "orm", "odm", "aws"]
description = "A DynamoDB odm library for rust"
homepage = "https://github.com/gabotechs/dynarust"
keywords = ["dynamo", "dynamodb", "aws", "odm"]
license = "MIT"
name = "dynarust"
readme = "README.md"
repository = "https://github.com/gabotechs/dynarust"
version = "0.3.1"
edition = "2021"

[dependencies]
aws-config = "1.1.9"
aws-sdk-dynamodb = "1.20.0"
aws-smithy-runtime-api = "1.2.0"
aws-smithy-types = "1.1.8"
rand = "^0.8.5"
serde = { version = "^1.0.158", features = ["derive"] }
serde_json = "^1.0.94"
thiserror = "^1.0.40"

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { version = "^1", features = ["full"] }

[lib]
doctest = false
